# arcmapper

./: .gitignore  .replit  Dockerfile  Makefile  PRD.md  README.md  pyproject.toml  sample.py
.github/workflows/: deploy.yml  docker.yml  tests.yml
arc-fhir/: ARC_pre_1.0.0_preset_dengue.xlsx  README.md
src/arcmapper/: __init__.py  __main__.py  app.py  arc.py  components.py  dictionary.py  fhir.py  labels.py  mapping_progress.py  strategies.py  types.py  util.py
src/isaric_automapper/: __init__.py
tests/: conftest.py  excel_encoded.txt  test_arc.py  test_dictionary.py  test_e2e.py  test_fhir.py  test_strategies.py  test_util.py
tests/__snapshots__/: test_fhir.ambr
tests/data/: CCPUKSARIEastMidlands_DataDictionary_2022-06-06.csv  arcmapper-mapping-file.csv
