[project]
name = "arcmapper"
version = "0.1.0"
description = "Automapper library for ISARIC ARC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "sentence-transformers>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
