[project]
name = "arcmapper"
version = "0.1.0"
description = "Automapper library for ISARIC ARC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.1",
    "pandas[excel]>=2.2.2",
    "scikit-learn>=1.5.1",
    "sentence-transformers>=3.2.1",
    "waitress>=3.0.0",
]

[project.scripts]
arcmapper = "arcmapper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "syrupy>=4.7.2",
    "selenium>=4.27.1",
]
